syntax = "proto3";

package lvi;

import "google/protobuf/descriptor.proto";

message RootOptions {
  string table_name = 2;
}

extend google.protobuf.MessageOptions {
  // bool table_root = 51234;
  RootOptions root_options = 51235; // Which number to pick anyway?
}

extend google.protobuf.FieldOptions {
  bool required = 1010; // Which number to pick anyway?
  string description = 1012;
  bool batch_attribute = 1013;
}
